hi-world-kn-svc.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: hi-world-kn
  namespace: serverless-test
spec:
  template:
    spec:
      containers:
        - image: docker.io/openshift/hello-openshift 
          env:
            - name: RESPONSE 
              value: "Hi world of serverless"
