http-deploy.yaml
apiVersion: v1
kind: List
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: hi-world-git
      app.kubernetes.io/component: hi-world-git
      app.kubernetes.io/instance: hi-world-git
    name: hi-world-git
  spec:
    replicas: 3
    revisionHistoryLimit: 10
    selector:
      deploymentconfig: hi-world-git
    template:
      metadata:
        labels:
          deploymentconfig: hi-world-git
      spec:
        containers:
        - image: hi-world-git
          imagePullPolicy: Always
          name: hi-world-git
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - hi-world-git
        from:
          kind: ImageStreamTag
          name: hi-world-git
      type: ImageChange
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    labels:
      app: hi-world-git
      app.kubernetes.io/component: hi-world-git
      app.kubernetes.io/instance: hi-world-git
    name: hi-world-git
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: hi-world-git
      app.kubernetes.io/component: hi-world-git
      app.kubernetes.io/instance: hi-world-git
    name: hi-world-git
  spec:
    port:
      targetPort: 8080-tcp
    tls:
      termination: edge
    to:
      kind: Service
      name: hi-world-git
      weight: 100
    wildcardPolicy: None
